--- a/user-auth/react-app/src/components/content.css
+++ b/user-auth/react-app/src/components/content.css
@@ -18,11 +18,12 @@ body {
 /* .content {
 } */
 
-.article {
+/* .article {
     display: flex;
-    width: 100%;
+    max-width: 100%;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
     border: 1px solid #ACAA9D;
     border-radius: 1rem;
     margin: 1rem 0;
@@ -40,9 +41,20 @@ body {
     margin: 1rem 0;
     padding: 1rem 1rem;
     box-shadow: 0px 0px 25px 5px #ab8860, inset 0px 0px 10px 7px #acaa9d
+} */
+
+.content-container {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #ACAA9D;
+    border-radius: 1rem;
+    margin: 1rem 0;
+    padding: 1rem 1rem;
+    box-shadow: 0px 0px 25px 5px #ab8860, inset 0px 0px 10px 7px #acaa9d;
+    overflow: hidden;
 }
-
-
 
 /* 
 content 
